--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5"
