--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.16",
-		"@mui/material": "^5.14.17"
+		"@mui/material": "^5.14.17",
+		"mongodb": "^6.2.0"
 	}
 }
