--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.16",
 		"@mui/material": "^5.14.17",
-		"mongodb": "^6.2.0"
+		"mongodb": "^6.2.0",
+		"razorpay": "^2.9.2"
 	}
 }
