--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
   "author": "Innov8",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/cloudfront-signer": "^3.445.0",
+    "aws-sdk": "^2.1494.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   }
 }
