--- a/Client/package.json
+++ b/Client/package.json
@@ -24,5 +24,9 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.3"
   }
 }
