--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     working_dir: /app
     ports:
       - "42069:42069"
-      
+    volumes:
+      - /var/www/nova_be/logs:/app/logs
 
   frontend:
     build: 
@@ -20,4 +21,5 @@ services:
     tty: true
     depends_on:
       - backend
-
+    volumes:
+      - /var/www/nova_fe/logs:/app/logs
